tests/ui/imports/import-prefix-macro-1.stderr
error: expected one of `::`, `;`, or `as`, found `{`
  --> $DIR/import-prefix-macro-1.rs:11:27
   |
LL |     ($p: path) => (use $p {S, Z});
   |                           ^ expected one of `::`, `;`, or `as`
...
LL | import! { a::b::c }
   | ------------------- in this macro invocation
   |
   = note: this error originates in the macro `import` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

